1.001000 - 2013-12-11
  - Add a constructor for people who want to forget how silly the JSON API is

1.000000 - 2013-05-22
  - Released on an unsuspecting world.